--- a/beautyApp/frontend/src/app/customer-pages/review-page/review-page.component.css
+++ b/beautyApp/frontend/src/app/customer-pages/review-page/review-page.component.css
@@ -1,23 +1,21 @@
-
-body, mat-drawer-container{
+body,
+mat-drawer-container {
   background-color: #D8C2A5;
   height: 100%;
 }
 
- 
-mat-drawer{
+mat-drawer {
   width: 30%;
   height: 100%;
   background-color: #C6B4B4;
 }
 
-a{
+a {
   background-color: #C6B4B4;
   border-color: #C6B4B4;
 }
 
-
-.no-shadow{
+.no-shadow {
   box-shadow: none !important;
   align-items: center;
   background-color: #D8C2A5;
@@ -25,13 +23,12 @@ a{
   margin-bottom: 0%;
 }
 
-mat-card-title{
+mat-card-title {
   /* margin-top: 0%; */
   width: fit-content;
 }
 
-
-mat-card{
+.mat-card {
   padding-bottom: 2%;
   margin-top: 2%;
   margin-left: 25%;
@@ -42,16 +39,113 @@ mat-card{
 }
 
 @media only screen and (max-width: 600px) {
-  mat-card{
-      padding-bottom: 2%;
-      margin-top: 5%;
-      margin-left: 15%;
-      width: 70%;
-      align-self: center;
-      align-content: center;
-      align-items: center;
+  .mat-card {
+    padding-bottom: 2%;
+    margin-top: 5%;
+    margin-left: 15%;
+    width: 70%;
+    align-self: center;
+    align-content: center;
+    align-items: center;
   }
 }
+
+.service-card {
+  margin-top: 2%;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #C6B4B4;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.service-card-header {
+  text-align: center;
+  padding: 16px;
+  display: flex;
+  justify-content: center;
+}
+
+.service-card-content {
+  padding: 16px;
+  color: white;
+  display: flex;
+}
+
+/* service photo */
+.profile-image-container {
+  width: 150px;
+  height: 150px;
+  margin-right: 50px;
+  overflow: hidden;
+}
+
+.profile-image {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+/* service details */
+.service-details {
+  flex: 1;
+}
+
+.service-name {
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: x-large;
+}
+
+.google-maps-link {
+  font-size: small;
+  color: white;
+  text-decoration: underline;
+}
+
+.google-maps-link:hover {
+  color: black;
+}
+
+
+.service-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+}
+
+
+/* service buttons */
+.tab-bar {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
+
+.service-button {
+  flex: 1;
+  background-color: #C6B4B4;
+  border: none;
+  color: white;
+  padding: 10px 0;
+  margin: 0 5px;
+  cursor: pointer;
+  outline: none;
+  transition: background-color 0.3s ease;
+  border-radius: 8px;
+}
+
+.service-button:hover {
+  background-color: #B3A3A3;
+}
+
+
+/* page content */
 
   .review-card {
     margin-top: 2%;
@@ -109,32 +203,8 @@ mat-card{
     align-items: center;
     padding: 8px;
   }
-  
-  .review-cost {
-    text-align: right;
-  }
 
   .no-review {
     text-align: center;
   }
 
-
-  .review-card-actions {
-    padding: 16px;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .review-button {
-    padding: 8px 16px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .review-button:hover {
-    background-color: #45a049;
-  }
-  
