--- a/beautyApp/frontend/src/app/customer-pages/serviceProfile-page/serviceProfile-page.component.css
+++ b/beautyApp/frontend/src/app/customer-pages/serviceProfile-page/serviceProfile-page.component.css
@@ -1,23 +1,21 @@
-
-body, mat-drawer-container{
+body,
+mat-drawer-container {
   background-color: #D8C2A5;
   height: 100%;
 }
 
- 
-mat-drawer{
+mat-drawer {
   width: 30%;
   height: 100%;
   background-color: #C6B4B4;
 }
 
-a{
+a {
   background-color: #C6B4B4;
   border-color: #C6B4B4;
 }
 
-
-.no-shadow{
+.no-shadow {
   box-shadow: none !important;
   align-items: center;
   background-color: #D8C2A5;
@@ -25,13 +23,12 @@ a{
   margin-bottom: 0%;
 }
 
-mat-card-title{
+mat-card-title {
   /* margin-top: 0%; */
   width: fit-content;
 }
 
-
-mat-card{
+.mat-card {
   padding-bottom: 2%;
   margin-top: 2%;
   margin-left: 25%;
@@ -42,14 +39,14 @@ mat-card{
 }
 
 @media only screen and (max-width: 600px) {
-  mat-card{
-      padding-bottom: 2%;
-      margin-top: 5%;
-      margin-left: 15%;
-      width: 70%;
-      align-self: center;
-      align-content: center;
-      align-items: center;
+  .mat-card {
+    padding-bottom: 2%;
+    margin-top: 5%;
+    margin-left: 15%;
+    width: 70%;
+    align-self: center;
+    align-content: center;
+    align-items: center;
   }
 }
 
@@ -73,55 +70,42 @@ mat-card{
 .service-card-content {
   padding: 16px;
   color: white;
-  display: flex; 
-  justify-content: flex-start;
+  display: flex;
 }
 
+/* service photo */
 .profile-image-container {
   width: 150px;
-  height: 150px; 
+  height: 150px;
   margin-right: 50px;
-  overflow: hidden; 
+  overflow: hidden;
 }
 
 .profile-image {
   width: 100%;
-  height: auto; 
-  object-fit: cover; 
+  height: auto;
+  object-fit: cover;
 }
 
+/* service details */
 .service-details {
-  flex: 1; 
+  flex: 1;
 }
 
 .service-name {
   font-weight: bold;
   text-transform: uppercase;
-  font-size: larger; 
+  font-size: x-large;
 }
 
 .google-maps-link {
-  font-size: x-small;
+  font-size: small;
   color: white;
   text-decoration: underline;
 }
 
 .google-maps-link:hover {
   color: black;
-}
-
-.service-card-title {
-  text-align: center;
-  font-weight: bold;
-  color: white;
-  font-family: sans-serif;
-  font-size: larger;
-}
-
-.service-card-loading {
-  padding: 16px;
-  color: white;
-  text-align: center;
 }
 
 
@@ -132,53 +116,93 @@ mat-card{
   padding: 8px;
 }
 
-.service-cost {
-  text-align: right;
-}
 
-.no-service {
-  text-align: center;
-}
-
-
-.service-card-actions {
-  padding: 16px;
+/* service buttons */
+.tab-bar {
   display: flex;
   justify-content: space-between;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
 }
 
 .service-button {
-  padding: 8px 16px;
-  background-color: #4CAF50;
-  color: white;
+  flex: 1;
+  background-color: #C6B4B4;
   border: none;
-  border-radius: 4px;
+  color: white;
+  padding: 10px 0;
+  margin: 0 5px;
   cursor: pointer;
+  outline: none;
+  transition: background-color 0.3s ease;
+  border-radius: 8px;
 }
 
 .service-button:hover {
-  background-color: #45a049;
+  background-color: #B3A3A3;
 }
 
 
-
-
+/* page content */
 .portfolio-image-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center; /* Center vertically */
+  height: 100%; /* Ensure full height */
 }
 
 .image-wrapper {
-  width: 30%; /* Each image takes up 30% width */
-  padding: 5px; /* Add some padding around each image */
-  box-sizing: border-box; /* Include padding in width calculation */
+  width: 30%; 
+  padding: 10px; 
+  box-sizing: border-box; 
+  overflow: hidden;
+  position: relative; 
+  aspect-ratio: 1;
 }
 
 .portfolio-image {
-  width: 100%; /* Make sure the image fills its container */
-  height: auto; /* Maintain aspect ratio */
+  width: 100%;
+  height: 100%; 
+  object-fit: cover; 
+}
+
+.no-portfolio {
+  justify-content: center;
+  align-items: center;
+  height: 100%; /* Ensure the container takes up the full height */
 }
 
 
+.no-portfolio-header {
+  text-align: center;
+  font-weight: bold;
+  color: white;
+  font-family: sans-serif;
+  font-size: larger;
+}
 
+.portfolio-card-header {
+  text-align: center;
+  padding: 16px;
+  display: flex;
+  justify-content: center;
+}
 
+.portfolio-card-title {
+  margin-top: 1%;
+  text-align: center;
+  font-weight: bold;
+  color: white;
+  font-family: sans-serif;
+  font-size: larger;
+}
+
+.portfolio-card-content {
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  height: 100%; /* Set height to occupy the full height of the container */
+}
