--- a/beautyApp/frontend/src/app/business-pages/update-pricing-page/update-pricing-page.component.html
+++ b/beautyApp/frontend/src/app/business-pages/update-pricing-page/update-pricing-page.component.html
@@ -1,4 +1,13 @@
 <div class="background">
+    <!-- Success message -->
+    <div *ngIf="successMessage" class="success-message">
+      {{ successMessage }}
+    </div>
+  
+    <!-- Error message -->
+    <div class="alert alert-warning" *ngIf="errorMessage" class="error-message">
+      {{ errorMessage }}
+    </div>
     <div
     class="authentication-card-container"
     fxLayout="column"
