--- a/beautyApp/frontend/src/app/business-pages/business-pages.component.css
+++ b/beautyApp/frontend/src/app/business-pages/business-pages.component.css
@@ -46,3 +46,22 @@ mat-card-title{
   .delete-button {
     margin-left: right; /* Push the button to the right */
   }
+
+  
+/* Success message */
+.success-message {
+    color: green;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+  
+  /* Error message */
+  .error-message {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
