--- a/beautyApp/frontend/src/app/business-pages/update-pricing-page/update-pricing-page.component.css
+++ b/beautyApp/frontend/src/app/business-pages/update-pricing-page/update-pricing-page.component.css
@@ -29,3 +29,23 @@ button{
 mat-card-title{
     color: white;
 }
+
+ 
+/* Success message */
+.success-message {
+    color: green;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+  
+  /* Error message */
+  .error-message {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+
