--- a/beautyApp/frontend/src/app/customer-pages/dashboard-page/dashboard-page.component.html
+++ b/beautyApp/frontend/src/app/customer-pages/dashboard-page/dashboard-page.component.html
@@ -37,6 +37,12 @@
                   <mat-card-title>Appointments</mat-card-title>
                   <!-- <mat-card-subtitle>test</mat-card-subtitle> -->
                 </mat-card-header>
+                <mat-card-content>
+                  <div class="appointment">
+                    <div class="datetime">April 8, 2024 - 10:00 AM</div>
+                    <div class="salon-name">Salon XYZ</div>
+                  </div>
+                </mat-card-content>
                
             </mat-card>
 
@@ -44,16 +50,15 @@
                 <mat-card-header>
                   <mat-card-title> Available Voucher</mat-card-title>
                   <!-- <mat-card-subtitle>test</mat-card-subtitle> -->
+                  
                 </mat-card-header>
+                <mat-card style="color: aliceblue; margin-left: 0%; background-color: grey;">
+                  <mat-card-title> $5 Welcome Voucher </mat-card-title>
+                  <mat-card-subtitle>Code: 523412A </mat-card-subtitle>
+              </mat-card>
                
             </mat-card>
-            <mat-card>
-                <mat-card-header>
-                  <mat-card-title> Top Picks </mat-card-title>
-                  <!-- <mat-card-subtitle>test</mat-card-subtitle> -->
-                </mat-card-header>
-               
-            </mat-card>
+       
 
             <mat-card>
                 <mat-card-header>
