upcoming appointments backend and frontend added

--- a/beautyApp/frontend/src/app/customer-pages/dashboard-page/dashboard-page.component.html
+++ b/beautyApp/frontend/src/app/customer-pages/dashboard-page/dashboard-page.component.html
@@ -37,12 +37,14 @@
                   <mat-card-title>Appointments</mat-card-title>
                   <!-- <mat-card-subtitle>test</mat-card-subtitle> -->
                 </mat-card-header>
+                <div *ngFor="let appointment of appointments">
                 <mat-card-content>
                   <div class="appointment">
-                    <div class="datetime">April 8, 2024 - 10:00 AM</div>
-                    <div class="salon-name">Salon XYZ</div>
+                    <div class="datetime">{{appointment.appointmentDate}} - {{appointment.appointmentTime}}</div>
+                    <div class="salon-name"  style="cursor: pointer;" (click)= "routeService(appointment.appointmentServiceId)" >{{appointment.appointmentName}}</div>
                   </div>
                 </mat-card-content>
+              </div>
                
             </mat-card>
 
