--- a/beautyApp/frontend/src/app/home-pages/register-page/register-page.component.css
+++ b/beautyApp/frontend/src/app/home-pages/register-page/register-page.component.css
@@ -2,8 +2,13 @@
 .authentication-card {
     width: 60%;
     margin: 0 auto;
+    
 }
 
 .authentication-card-container {
     min-height: 100vh;
+}
+
+.background{
+    background-color: #D8C2A5;
 }
