--- a/beautyApp/frontend/src/app/customer-pages/dashboard-page/dashboard-page.component.html
+++ b/beautyApp/frontend/src/app/customer-pages/dashboard-page/dashboard-page.component.html
@@ -88,6 +88,13 @@
             </mat-card>
 
             <mat-card>
+              <mat-card-header>
+                <mat-card-title  (click) = "registerPage()"  style="cursor: pointer;"> Register A Business</mat-card-title>
+              </mat-card-header>
+             
+          </mat-card>
+
+            <mat-card>
                 <mat-card-header>
                   <mat-card-title (click)="logout()" style="cursor: pointer;"> Log Out </mat-card-title>
                 </mat-card-header>
