--- a/beautyApp/frontend/src/app/business-pages/business-pages.component.html
+++ b/beautyApp/frontend/src/app/business-pages/business-pages.component.html
@@ -1,4 +1,27 @@
-<div class="background">
+
+  <mat-drawer-container class="example-container" hasBackdrop="false">
+      <mat-drawer #drawer mode="side">
+        
+        <img style="height: auto; width:60%; margin-left:20%;" src="logo.png" > 
+        <div class="main-content-wrapper">
+        
+
+          <a  style="color: beige; cursor: pointer;" (click)= "routeTo('nails')" (click)="drawer.toggle()">Nails</a>
+          <a  style="color: beige; cursor: pointer;"  (click) = "routeTo('lash')" (click)="drawer.toggle()">Lashes</a>
+          <a  style="color: beige; cursor: pointer;"  (click) = "returnToDashBoard()" (click)="drawer.toggle()">Home</a>
+          <a  style="color: beige; cursor: pointer;"  (click)="logout()">Log out</a>
+        </div>
+      </mat-drawer>
+      <mat-drawer-content>
+      
+      <input type="checkbox"  class="openSidebarMenu" id="openSidebarMenu">
+      <label for="openSidebarMenu" (click)="drawer.toggle()" class="sidebarIconToggle">
+          <div class="spinner diagonal part-1"></div>
+          <div class="spinner horizontal"></div>
+          <div class="spinner diagonal part-2"></div>
+      </label>
+
+  <div class="background">
   <div class="authentication-card-container" fxLayout="column" fxLayoutAlign="center">
     <mat-card class="authentication-card">
       <ng-container *ngIf="serviceId !== null">
@@ -106,8 +129,12 @@
         <button type="button" color="primary" (click)="onSubmit()">Submit</button>
       </mat-card-actions>
     </mat-card>
+    
   </div>
+      
 </div>
+</mat-drawer-content>
+</mat-drawer-container>
 <footer>
   <div class="container">
     <p>&copy; 2024 Nails Service. All rights reserved.</p>
