--- a/beautyApp/frontend/src/app/customer-pages/dashboard-page/dashboard-page.component.html
+++ b/beautyApp/frontend/src/app/customer-pages/dashboard-page/dashboard-page.component.html
@@ -24,7 +24,7 @@
         <div>
             <mat-card class="no-shadow">
                 <mat-card-header class="heading-title">
-                  <mat-card-title>Welcome {{user}}</mat-card-title>
+                  <mat-card-title>Welcome to BeautyApp! {{user}}</mat-card-title>
                 </mat-card-header>
                
             </mat-card>
