--- a/beautyApp/frontend/src/app/business-pages/update-pricing-page/update-pricing-page.component.html
+++ b/beautyApp/frontend/src/app/business-pages/update-pricing-page/update-pricing-page.component.html
@@ -32,7 +32,7 @@
           <br>
           <mat-form-field>
             <mat-label>Cost</mat-label>
-            <input matInput type="number" formControlName="pricingCost" />
+            <input matInput type="number" formControlName="pricingCost" min="0" />
           </mat-form-field>
           <br>
           <mat-form-field>
