--- a/beautyApp/frontend/src/app/home-pages/base-home/base-home.component.html
+++ b/beautyApp/frontend/src/app/home-pages/base-home/base-home.component.html
@@ -9,7 +9,7 @@
         <button mat-raised-button (click)="login()">Login</button>
     </div>    
     <div class="container-service">
-        <p style="width: 20%; margin-left: 50%;"> Services </p>
+        <!-- <p style="width: 20%; margin-left: 50%;"> Services </p> -->
         <!-- <img style="height: auto; width:30%;" src="logo.png" > 
         <img style="height: auto; width:30%;" src="logo.png" > 
         <img style="height: auto; width:30%;" src="logo.png" >  -->
