--- a/beautyApp/frontend/src/app/user-list/user-list.component.html
+++ b/beautyApp/frontend/src/app/user-list/user-list.component.html
@@ -1,46 +1,47 @@
+
+
+
 <body>
 
-<div class="container">
-    <div class="body">
-        <input type="checkbox"  class="openSidebarMenu" id="openSidebarMenu">
-        <label for="openSidebarMenu" class="sidebarIconToggle">
-            <div class="spinner diagonal part-1"></div>
-            <div class="spinner horizontal"></div>
-            <div class="spinner diagonal part-2"></div>
-        </label>
-        <div id="sidebarMenu">
-              <div class="main-content-wrapper">
-                  <a href="/">Nails</a>
-                  <a href="/">Lashes</a>
-                  <a (click)="logout()">Log out</a>
-              </div>
-          </div>
-      </div>
-    <h2 class="text-center">User List</h2>
-    <table class="table table-stripped">
-        <thead>
-            <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Username</th>
-                <th >Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let user of users">
-                <td> {{ user.name }} </td>
-                <td> {{ user.name }} </td>
-                <td> {{ user.name }} </td>
-                <td>
-                    <button (click) = "updateUser(user.userId)" class="btn btn-info">Update</button>
-                    <button (click) = "deleteUser(user.userId)" class="btn btn-danger">Delete</button>
-                </td>
-            </tr>
-        </tbody>
 
-        <button mat-raised-button color="primary" (click)="logout()">Logout</button>
-    </table>
+        <div 
+            class="authentication-card-container"
+            fxLayout="column"
+            fxLayoutAlign="center"
+            >
+            <mat-card class="authentication-card">
+                <mat-card-header>
+                <mat-card-title>Settings</mat-card-title></mat-card-header
+                >
+                <mat-card-content  style="width: 100%; margin-left: 70%;">
+                    <thead>
+                        <tr>
+                            <th style="width: 30%; color: #D8C2A5 ;">First Name</th>
+                            <th  style="width: 30%;">Last Name</th>
+                            <th  style="width: 30%;">Username</th>
+                           
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let user of users">
+                            <td> {{ user.name }} </td>
+                            <td> {{ user.name }} </td>
+                            <td> {{ user.name }} </td>
+                      
+                        </tr>
+                    </tbody>
+            
+                   
+                </mat-card-content>
+                <mat-card-actions>
+            
+                <button mat-raised-button color="primary" (click)="logout()">Logout</button>
+              
+                </mat-card-actions>
+            </mat-card>
+        </div>
 
 
-</div>
+    
 </body>
+
