add manage page route

--- a/beautyApp/frontend/src/app/customer-pages/dashboard-page/dashboard-page.component.html
+++ b/beautyApp/frontend/src/app/customer-pages/dashboard-page/dashboard-page.component.html
@@ -79,6 +79,14 @@
               
                
             </mat-card>
+
+            <mat-card>
+              <mat-card-header>
+                <mat-card-title  (click) = "managePage()"  style="cursor: pointer;"> Manage My Business</mat-card-title>
+              </mat-card-header>
+            </mat-card>
+
+            
        
 
             <mat-card>
