--- a/beautyApp/frontend/src/app/manage-business-pages/manage-business-pages.component.css
+++ b/beautyApp/frontend/src/app/manage-business-pages/manage-business-pages.component.css
@@ -38,7 +38,7 @@ body, .table, .table-stripped, table{
         box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
         -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
         border-radius: 10px;
-        background: #0000002e;
+        background: #4b4545;
         height: 50px;
     }
     .sidebarMenuInner{
@@ -119,3 +119,71 @@ body, .table, .table-stripped, table{
               display:block
            }
         }
+
+
+        
+body, mat-drawer-container{
+    background-color: #D8C2A5;
+    height: 100%;
+  }
+
+mat-drawer{
+    width: 30%;
+    height: 100%;
+    background-color: #C6B4B4;
+  }
+
+  a{
+    background-color: #C6B4B4;
+    border-color: #C6B4B4;
+  }
+
+
+.no-shadow{
+    box-shadow: none !important;
+    align-items: center;
+    background-color: #D8C2A5;
+    align-content: center;
+    margin-bottom: 0%;
+}
+mat-card-title{
+    /* margin-top: 0%; */
+    width: fit-content;
+}
+
+
+mat-card{
+    padding-bottom: 2%;
+    margin-top: 2%;
+    margin-left: 25%;
+    width: 50%;
+    align-self: center;
+    align-content: center;
+    align-items: center;
+}
+
+.appointment {
+  padding: 16px;
+  border-bottom: 1px solid #ccc;
+}
+
+.datetime {
+  font-size: 18px;
+  color: #fff; /* Changing text color to white */
+}
+
+.salon-name {
+  font-size: 16px;
+  color: #ccc; /* Adjusting salon name color */
+}
+@media only screen and (max-width: 600px) {
+    mat-card{
+        padding-bottom: 2%;
+        margin-top: 5%;
+        margin-left: 15%;
+        width: 70%;
+        align-self: center;
+        align-content: center;
+        align-items: center;
+    }
+  }
